@@ -799,9 +799,8 @@ class MediaFile(object):
                 etc = StorageStyle('compilation')
             )
     albumartist = MediaField(
-                mp3 = StorageStyle('TXXX', id3_desc=u'Album Artist'),
-                mp4 = StorageStyle(
-                    '----:com.apple.iTunes:Album Artist'),
+                mp3 = StorageStyle('TPE2'),
+                mp4 = StorageStyle('aART'),
                 etc = [StorageStyle('album artist'),
                        StorageStyle('albumartist')]
             )
